.provarCaches/00D5h000009Q6XQEA0/objects/provar__System__c.object
<CustomObject>
    <description>System environments are the individual applications and systems that constitute parts of an environment. This would typically include the Salesforce sandbox under test alongside any integrated applications, such as an ERP system</description>
    <fields>
        <fullName>provar__API_Endpoint__c</fullName>
        <description>Base URL for API calls to this environment. For different applications running on the same server use separate System Environments to represent each application to test</description>
        <inlineHelpText>Enter the base API Endpoint URL for any API tests</inlineHelpText>
        <label>API Endpoint</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>provar__API_Key__c</fullName>
        <label>API Key</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>provar__Authentication_Type__c</fullName>
        <label>Authentication Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No Authentication</fullName>
                    <default>true</default>
                    <label>No Authentication</label>
                </value>
                <value>
                    <fullName>Basic Authentication</fullName>
                </value>
                <value>
                    <fullName>Named Credential</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>provar__Authorization_Endpoint__c</fullName>
        <label>Authorization Endpoint</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>provar__Connection_Details__c</fullName>
        <description>Any connection details for this endpoint that help uniquely identify it</description>
        <inlineHelpText>Enter any connection details that distinguish this system from other entries. We do not recommend storing passwords or API keys but this may be a username, schema or IP address</inlineHelpText>
        <label>Connection Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>provar__Environments__c</fullName>
        <description>Parent environment to which this system belongs</description>
        <label>Environment</label>
        <referenceTo>provar__Environment__c</referenceTo>
        <relationshipName>System_Environments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>provar__External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>provar__Latest_Code_Coverage_Report__c</fullName>
        <label>Latest Code Coverage Report</label>
        <summarizedField>provar__Coverage_Report__c.provar__Report_Date__c</summarizedField>
        <summaryFilterItems>
            <field>provar__Coverage_Report__c.provar__Coverage_Type__c</field>
            <operation>equals</operation>
            <value>Apex Code</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>provar__Coverage_Report__c.provar__Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </summaryFilterItems>
        <summaryForeignKey>provar__Coverage_Report__c.provar__System__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>provar__Latest_Code_Scan__c</fullName>
        <label>Latest Code Scan</label>
        <summarizedField>provar__Code_Scan__c.provar__Scan_Date__c</summarizedField>
        <summaryFilterItems>
            <field>provar__Code_Scan__c.provar__Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </summaryFilterItems>
        <summaryForeignKey>provar__Code_Scan__c.provar__System__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>provar__Latest_Flow_Coverage_Report__c</fullName>
        <label>Latest Flow Coverage Report</label>
        <summarizedField>provar__Coverage_Report__c.provar__Report_Date__c</summarizedField>
        <summaryFilterItems>
            <field>provar__Coverage_Report__c.provar__Coverage_Type__c</field>
            <operation>equals</operation>
            <value>Flow</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>provar__Coverage_Report__c.provar__Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </summaryFilterItems>
        <summaryForeignKey>provar__Coverage_Report__c.provar__System__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>provar__Named_Credential__c</fullName>
        <label>Named Credential</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>provar__Password__c</fullName>
        <label>Password</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>provar__Repository__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Repository</label>
        <referenceTo>provar__Repository__c</referenceTo>
        <relationshipLabel>Branches</relationshipLabel>
        <relationshipName>Systems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>provar__Salesforce_Instance__c</fullName>
        <inlineHelpText>e.g. CS45</inlineHelpText>
        <label>Salesforce Instance</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>provar__Salesforce_Org_Id__c</fullName>
        <label>Salesforce Org Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>provar__Setup_Instructions__c</fullName>
        <label>Setup Instructions</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>provar__System_Type__c</fullName>
        <label>System Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>provar__System_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>provar__Username__c</fullName>
        <label>Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>provar__Version__c</fullName>
        <description>The system version (e.g. 2.2.32)</description>
        <label>Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>provar__Web_URL__c</fullName>
        <inlineHelpText>Enter the base URL or web address for this system environment</inlineHelpText>
        <label>Web URL</label>
        <type>Url</type>
    </fields>
    <label>System</label>
    <listViews>
        <fullName>provar__All</fullName>
        <columns>NAME</columns>
        <columns>provar__Environments__c</columns>
        <columns>provar__System_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>System Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Systems</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>provar__Git_Branch_type_requires_Repository</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( provar__System_Type__c, &apos;Git Branch&apos;) &amp;&amp; ISBLANK(provar__Repository__c)</errorConditionFormula>
        <errorDisplayField>provar__System_Type__c</errorDisplayField>
        <errorMessage>Please, select a Repository.</errorMessage>
    </validationRules>
</CustomObject>